Добавлены шрифты, реализован блок навигации

--- a/index.html
+++ b/index.html
@@ -7,17 +7,57 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GoHub</title>
     <!--Стили-->
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
     <!-- Font Awesome 5 if needed -->
-    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="css/all.min.css">
     <!-- / Font Awesome 5 -->
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
+    <header class="header">
+        <div class="navbar">
+            <div class="container">
+                <div class="navbar-wrap">
+                    <div class="logo navbar__logo">
+                        <a href="#">
+                            <img src="img/logo.png" alt="logo" class="logo__img">
+                        </a>
+                    </div>
+                    <!-- /.logo navbar__logo -->
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Product</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Customers</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Pricing</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Docs</a>
+                            </li>
+                            <li class="menu__item">
+                                <button class="button button_textsize_big navbar__button">Sign in</button>
+                            </li>
+                        </ul>
 
+                    </nav>
+                    <!-- /.menu -->
+                </div>
+                <!-- /.navbar-wrap -->
+            </div>
+            <!-- /.container -->
+        </div>
+        <!-- /.navbar -->
+        <div class="hero"></div>
+        <!-- /.hero -->
+    </header>
+    <!-- /.header -->
 </body>
 
 </html>
