Реализация блока Hero

--- a/index.html
+++ b/index.html
@@ -30,22 +30,21 @@
                     <nav class="menu">
                         <ul class="menu__list">
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Product</a>
+                                <a href="#" class="link menu__link">Product</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Customers</a>
+                                <a href="#" class="link menu__link">Customers</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Pricing</a>
+                                <a href="#" class="link menu__link">Pricing</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Docs</a>
+                                <a href="#" class="link menu__link">Docs</a>
                             </li>
                             <li class="menu__item">
                                 <button class="button button_textsize_big navbar__button">Sign in</button>
                             </li>
                         </ul>
-
                     </nav>
                     <!-- /.menu -->
                 </div>
@@ -54,7 +53,16 @@
             <!-- /.container -->
         </div>
         <!-- /.navbar -->
-        <div class="hero"></div>
+        <div class="hero">
+            <div class="container">
+                <div class="hero-wrap">
+                    <h1 class="hero__title">Balance agility with stability!</h1>
+                    <p class="hero__description">Gohub monitors application stability, so you can make data-driven decisions on whether you should be building new features, or fixing bugs.</p>
+                    <button class="button button_textsize_normal hero__button">Get started</button>
+                    <a class="link hero__link" href="#">Questions? Talk to our team →</a>
+                </div>
+            </div>
+        </div>
         <!-- /.hero -->
     </header>
     <!-- /.header -->
