Реализован блок преимуществ с адаптивностью + правки отображения на небольших экранах

--- a/index.html
+++ b/index.html
@@ -64,6 +64,56 @@
         <!-- /.hero -->
     </header>
     <!-- /.header -->
+    <main class="main">
+        <section class="feature">
+            <div class="container">
+                <div class="feature-wrap">
+                    <div class="feature-heading">
+                        <h2 class="feature-heading__title">Improve the stability of  your application</h2>
+                        <!-- /.about-heading__title -->
+                        <p class="feature-heading__description">
+                            Bugsnag monitors application stability, so you can make data-driven decisions on whether you should be building new features, or fixing bugs.
+                        </p>
+                        <!-- /.about-heading__description -->
+                    </div>
+                    <div class="feature-item">
+												<img src="img/feature1.png" alt="feature1" class="feature-item__img">
+												<h3 class="feature-item__title">Be visible to "like"</h3>
+												<!-- /.feature-item__title -->
+												<p class="feature-item__description">
+														Strengthen your digital visibility in a universe where everyone is interested in travelling and renting gears. We help you build your presence  and make you relevant without you having to lift a finger!
+												</p>
+												<!-- /.feature-item__description -->
+										</div>
+										<!-- /.feature-item -->
+										<div class="feature-item">
+												<img src="img/feature2.png" alt="feature2" class="feature-item__img">
+												<h3 class="feature-item__title">Monitor online</h3>
+												<!-- /.feature-item__title -->
+												<p class="feature-item__description">
+														The platform has multiple functionalities and key features. With our intelligent system, you can approve bookings and monitor everything in your business online.
+												</p>
+												<!-- /.feature-item__description -->
+										</div>
+										<!-- /.feature-item -->
+										<div class="feature-item">
+												<img src="img/feeature3.png" alt="feature3" class="feature-item__img">
+												<h3 class="feature-item__title">More income</h3>
+												<!-- /.feature-item__title -->
+												<p class="feature-item__description">
+														Being on a digital platform is another sales channel added to strengthen your business. More work, in your hands. With our insights tools, we analyze your gear's performance in any season
+												</p>
+												<!-- /.feature-item__description -->
+										</div>
+										<!-- /.feature-item -->
+                </div>
+                <!-- /.aboutus-wrap -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.aboutus -->
+    </main>
+    <!-- /.main -->
 </body>
 
 </html>
