Реализован блок с сервисами + адаптивность

--- a/index.html
+++ b/index.html
@@ -107,11 +107,136 @@
 										</div>
 										<!-- /.feature-item -->
                 </div>
-                <!-- /.aboutus-wrap -->
+                <!-- /.feature-wrap -->
             </div>
             <!-- /.container -->
         </section>
-        <!-- /.aboutus -->
+				<!-- /.feature -->
+				<section class="services">
+					<div class="container">
+						<div class="services-wrap">
+							<div class="services-heading">
+								<h2 class="services-heading__title">Proof makes increasing conversions simple</h2>
+								<!-- /.services-heading__title -->
+								<p class="services-heading__description">
+										Getting a conversion boost didn’t used to be this easy. Luckily, you found Proof. Now you have the tools to let your customer do the selling for you.
+								</p>
+								<!-- /.services-heading__description -->
+							</div>
+							<!-- /.services-heading -->
+							<ul class="services__list">
+								<li class="services__item">
+									<img src="img/service1.png" alt="" class="services__img">
+									<h3 class="services__title">Higher Conversions</h3>
+									<!-- /.services__title -->
+									<p class="services__description">Convert more website visitors into signups and purchases.
+										</p>
+									<!-- /.services__description -->
+								</li>
+								<!-- /.services__item -->
+								<li class="services__item">
+									<img src="img/service2.png" alt="" class="services__img">
+									<h3 class="services__title">Save on Acquisition</h3>
+									<!-- /.services__title -->
+									<p class="services__description">Your advertising spend will go further than ever before.</p>
+									<!-- /.services__description -->
+								</li>
+								<!-- /.services__item -->
+								<li class="services__item">
+									<img src="img/service3.png" alt="" class="services__img">
+									<h3 class="services__title">Increase Visitor Trust</h3>
+									<!-- /.services__title -->
+									<p class="services__description">People trust companies they see other people buy from as well.</p>
+									<!-- /.services__description -->
+								</li>
+								<!-- /.services__item -->
+								<li class="services__item">
+									<img src="img/service4.png" alt="" class="services__img">
+									<h3 class="services__title">Social Influence</h3>
+									<!-- /.services__title -->
+									<p class="services__description">Seeing other visitors taking action creates fear of missing out.										</p>
+									<!-- /.services__description -->
+								</li>
+								<!-- /.services__item -->
+								<li class="services__item">
+									<img src="img/service5.png" alt="" class="services__img">
+									<h3 class="services__title">Activity Notifications</h3>
+									<!-- /.services__title -->
+									<p class="services__description">Display recent sales and opt-ins on your pages and drive visitors to convert.
+										</p>
+									<!-- /.services__description -->
+								</li>
+								<!-- /.services__item -->
+								<li class="services__item">
+									<img src="img/service6.png" alt="" class="services__img">
+									<h3 class="services__title">Customer Journeys</h3>
+									<!-- /.services__title -->
+									<p class="services__description">Your advertising spend will go further than ever before.</p>
+									<!-- /.services__description -->
+								</li>
+								<!-- /.services__item -->
+								<li class="services__item">
+									<img src="img/service7.png" alt="" class="services__img">
+									<h3 class="services__title">Custom Timing</h3>
+									<!-- /.services__title -->
+									<p class="services__description">Control when, how long and how fast notifications display on your site.
+										</p>
+									<!-- /.services__description -->
+								</li>
+								<!-- /.services__item -->
+								<li class="services__item">
+									<img src="img/service8.png" alt="" class="services__img">
+									<h3 class="services__title">Live Visitor Count</h3>
+									<!-- /.services__title -->
+									<p class="services__description">Show how many visitors are browsing your site - "28 people are viewing this page"
+										</p>
+									<!-- /.services__description -->
+								</li>
+								<!-- /.services__item -->
+								<li class="services__item">
+									<img src="img/service9.png" alt="" class="services__img">
+									<h3 class="services__title">Visitor Identification</h3>
+									<!-- /.services__title -->
+									<p class="services__description">We'll show you detailed profiles of every visitor who enters their email.
+										</p>
+									<!-- /.services__description -->
+								</li>
+								<!-- /.services__item -->
+								<li class="services__item">
+									<img src="img/service10.png" alt="" class="services__img">
+									<h3 class="services__title">Custom Rules</h3>
+									<!-- /.services__title -->
+									<p class="services__description">Granular control over how and when notifications display on your pages.
+										</p>
+									<!-- /.services__description -->
+								</li>
+								<!-- /.services__item -->
+								<li class="services__item">
+									<img src="img/service11.png" alt="" class="services__img">
+									<h3 class="services__title">Mobile Optimized</h3>
+									<!-- /.services__title -->
+									<p class="services__description">With mobile traffic approaching 70%, Proof looks amazing on mobile.
+										</p>
+									<!-- /.services__description -->
+								</li>
+								<!-- /.services__item -->
+								<li class="services__item">
+									<img src="img/service12.png" alt="" class="services__img">
+									<h3 class="services__title">Language Translation</h3>
+									<!-- /.services__title -->
+									<p class="services__description">Translate Recent Activity notification into any language you want. We're global.
+										</p>
+									<!-- /.services__description -->
+								</li>
+								<!-- /.services__item -->
+							</ul>
+							<!-- /.services__list -->
+						</div>
+						<!-- /.services-wrap -->
+					</div>
+					<!-- /.container -->
+				</section>
+				<!-- /.services -->
     </main>
     <!-- /.main -->
 </body>
