адаптивный блок с формой обратной связи

--- a/index.html
+++ b/index.html
@@ -406,6 +406,30 @@
 		<!-- /.wedo -->
 	</main>
 	<!-- /.main -->
+	<footer class="footer">
+		<div class="feedback">
+			<div class="container">
+				<div class="feedback-wrap">
+					<div class="feedback-heading">
+						<h3 class="feedback-heading__title">Ready to get started?</h3>
+						<!-- /.feedback-heading__title -->
+						<p class="feedback-heading__description">Get a guided demo with an OKR expert.</p>
+						<!-- /.feedback-heading__description -->
+					</div>
+					<!-- /.feedback-heading -->
+					<form action="#" class="feedback-form">
+						<input type="text" placeholder="Email address" class="feedback-form__input">
+						<a href="#" class="feedback-form__link ">Get started</a>
+					</form>
+					<!-- /.feedback-form -->
+				</div>
+				<!-- /.feedback-wrap -->
+			</div>
+			<!-- /.container -->
+		</div>
+		<!-- /.feedback -->
+	</footer>
+	<!-- /.footer -->
 </body>
 
 </html>
